# bitstream

./: .gitignore  AUTHORS  COPYING  ChangeLog  GNUmakefile  NEWS  README.rst  bitstream.cabal  bitvector.cabal  cabal-package.mk  default.nix  release.nix  shell.nix
Data/: BitVector.hs  Bitstream.hs
Data/BitVector/: BitChunk.hs
Data/Bitstream/: BitChunk.hs  Fusion.hs  Generic.hs  Internal.hs  Lazy.hs  Packet.hs
Data/Bitstream/Fusion/: Monadic.hs
Test/: Bitstream.hs
Test/Bitstream/: Lazy.hs  Utils.hs
bugs/: issue-14427b0ca9b4609425a8b67d13c9f5d8dbd79ed2.yaml  issue-181f9e4cd20d0b10793c95c331089c415d6780f7.yaml  issue-284bab01c35318153c940ed8985023bb3fa24f99.yaml  issue-2dc5e616b4f7b37938aa9af0cc92347505e98bd9.yaml  issue-5fd8edd5fcbfd181873bad7220b0464f54d82cd4.yaml  issue-63aa38c2e9f5cc0bae12c84da8d6d50476ed3ad3.yaml  issue-6c7987fd1352bd9bf8a43468d84e25df1bf3705b.yaml  issue-6ebdc738235de9aeb42dc8201e0ecf95c20920fd.yaml  issue-c512edb8325efc97405ad69890fa738f51fb8438.yaml  issue-c5b76f0ae8e407cd7229883efe4959d88cb5ad57.yaml  issue-cb5c945ed9eeab70bc8375f850eb088a68910673.yaml  project.yaml
