Name: bitstream
Synopsis: Fast, packed, strict and lazy bit streams with optional
          stream fusion
Description:

        Fast, packed, strict and lazy bit vectors with optional stream
        fusion. This is like @bytestring@ but stores bits instead of
        bytes.

Version: 0.1
License: PublicDomain
License-File: COPYING
Author: PHO <pho at cielonegro dot org>
Maintainer: PHO <pho at cielonegro dot org>
Stability: experimental
Homepage: http://cielonegro.org/Bitstream.html
Category: Data
Tested-With: GHC == 7.0.1
Cabal-Version: >= 1.9.2
Build-Type: Simple
Extra-Source-Files:
    COPYING

Source-Repository head
    Type: git
    Location: git://git.cielonegro.org/bitstream.git

Library
    Build-Depends:
        base                 == 4.*,
        base-unicode-symbols == 0.2.*,
        bytestring           == 0.9.*,
        storablevector       == 0.2.*,
        stream-fusion        == 0.1.*

    Exposed-Modules:
        Data.Bitstream
        Data.Bitstream.Generic
        Data.Bitstream.Lazy
        Data.Bitstream.Packet

    Other-Modules:
        Data.Bitstream.Internal

    GHC-Options:
        -Wall

Test-Suite test-strict-bitstream
    Type:    exitcode-stdio-1.0
    Main-Is: Test/Bitstream.hs
    Build-Depends:
        QuickCheck           == 2.4.*,
        base                 == 4.*,
        base-unicode-symbols == 0.2.*,
        bytestring           == 0.9.*,
        storablevector       == 0.2.*,
        stream-fusion        == 0.1.*
    GHC-Options:
        -Wall -fhpc